fix(TechList): resolve incorrect item order on mobile caused by selector rules

--- a/src/components/Home/AboutSection/TechList/TechList.module.scss
+++ b/src/components/Home/AboutSection/TechList/TechList.module.scss
@@ -75,32 +75,32 @@
 @include m.media(very-small) {
 
   // JavaScript
-  .techList li>button:nth-child(1) {
+  .techList li:nth-child(1) {
     order: 2;
   }
 
   // Sass
-  .techList li>button:nth-child(2) {
+  .techList li:nth-child(2) {
     order: 6;
   }
 
   // React
-  .techList li>button:nth-child(3) {
+  .techList li:nth-child(3) {
     order: 4;
   }
 
   // Next
-  .techList li>button:nth-child(4) {
+  .techList li:nth-child(4) {
     order: 5;
   }
 
   // Progressive Web Apps
-  .techList li>button:nth-child(5) {
+  .techList li:nth-child(5) {
     order: 1;
   }
 
   // Redux/Toolkit
-  .techList li>button:nth-child(6) {
+  .techList li:nth-child(6) {
     order: 3;
   }
 }
